myLogs.txt
Traceback (most recent call last):
  File "/home/robert/jrWetterstation/jrWetterstation.py", line 39, in <module>
    ky053.save()
  File "/home/robert/jrWetterstation/KY053_Sensor.py", line 74, in save
    myMail.sendTempMail(self.actTemp,self.minTemp,self.maxTemp)
  File "/home/robert/jrWetterstation/Mail.py", line 31, in sendTempMail
    server=smtplib.SMTP_SSL(self.smtpserver)
  File "/usr/lib/python2.7/smtplib.py", line 797, in __init__
    SMTP.__init__(self, host, port, local_hostname, timeout)
  File "/usr/lib/python2.7/smtplib.py", line 256, in __init__
    (code, msg) = self.connect(host, port)
  File "/usr/lib/python2.7/smtplib.py", line 316, in connect
    self.sock = self._get_socket(host, port, self.timeout)
  File "/usr/lib/python2.7/smtplib.py", line 802, in _get_socket
    new_socket = socket.create_connection((host, port), timeout)
  File "/usr/lib/python2.7/socket.py", line 553, in create_connection
    for res in getaddrinfo(host, port, 0, SOCK_STREAM):
socket.gaierror: [Errno -2] Name or service not known
  File "/home/robert/jrWetterstation/jrWetterstation.py", line 50
    myMail=Mail()
    ^
IndentationError: unexpected indent
